--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 authors = ["Mike Tang <miketang84@outlook.com>"]
 
 [dependencies]
-url = "*"
-serde = "*"
-serde_json = "*"
+url = "1.4.0"
+serde = "1.0.7"
+serde_json = "1.0.2"
 
 sapper = { git="https://github.com/sappworks/sapper" }
 
