--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Mike Tang <miketang84@outlook.com>"]
 
 [dependencies]
 sapper = { git="https://github.com/sappworks/sapper" }
-sapper_body_params = { path="../../" }
-log = "0.3"
-env_logger = "0.3"
-serde = "0.7"
-serde_json = "0.7"
-serde_macros = "0.7"
+sapper_body = { path="../../" }
+log = "*"
+env_logger = "*"
+serde = "1.0.7"
+serde_json = "1.0.2"
+serde_derive = "1.0.7"
