--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "sapper_body"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Mike Tang <miketang84@outlook.com>"]
 license = "MIT"
 description = "Body parsing module for sapper web framework."
+readme = "README.md"
+repository = "https://github.com/sappworks/sapper_body"
+documentation = "https://docs.rs/sapper_body"
+homepage = "https://github.com/sappworks/sapper_body"
 
 [dependencies]
 url = "1.5"
